[gd_scene load_steps=3 format=3 uid="uid://bkyl1pfsge5or"]

[ext_resource type="Script" path="res://UI/resources.gd" id="1_2usmm"]
[ext_resource type="Theme" uid="uid://n5br4ndkb332" path="res://UI/PanelContainerTheme.tres" id="2_cjb2e"]

[node name="Resources" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2usmm")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(1250, 60)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="PanelContainer" type="PanelContainer" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_cjb2e")

[node name="ScrapLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "ScrapLabel"

[node name="PanelContainer2" type="PanelContainer" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_cjb2e")

[node name="GoldLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "GoldLabel"

[node name="PanelContainer3" type="PanelContainer" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_cjb2e")

[node name="GoblinScrapCollectorLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/PanelContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "GoblinLabel"

[node name="PanelContainer4" type="PanelContainer" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_cjb2e")

[node name="OrcScrapCrafterLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/PanelContainer4"]
unique_name_in_owner = true
layout_mode = 2
text = "OrcLabel"
